[gd_scene load_steps=2 format=2]

[ext_resource path="res://World/ViewportController.gd" type="Script" id=1]

[node name="ViewportController" type="Control"]
script = ExtResource( 1 )

[node name="CatViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0

[node name="CatViewport" type="Viewport" parent="CatViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CatCamera" type="Camera2D" parent="CatViewportContainer/CatViewport"]
offset = Vector2( 100, 50 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="CatViewportContainer/CatViewport"]

[node name="ColorRect" type="ColorRect" parent="CatViewportContainer/CatViewport/ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.631373, 0.956863, 1, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerViewportContainer" type="ViewportContainer" parent="."]
visible = false
margin_left = 806.0
margin_top = 16.0
margin_right = 1006.0
margin_bottom = 216.0

[node name="PlayerViewport" type="Viewport" parent="PlayerViewportContainer"]
size = Vector2( 200, 200 )
handle_input_locally = false
render_target_update_mode = 0

[node name="PlayerCamera" type="Camera2D" parent="PlayerViewportContainer/PlayerViewport"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="PlayerViewportContainer/PlayerViewport"]

[node name="ColorRect" type="ColorRect" parent="PlayerViewportContainer/PlayerViewport/ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.631373, 0.956863, 1, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
